src/test/deca/syntax/valid/parser/extension/TAB_decl_mult_without_initilization.deca
{
    int[] a, b;
    float[] z, y;
    int[][] p, l;
    float[][] t, e;
}