src/test/deca/syntax/invalid/parser/oracle/decl_var_after_instr.deca
{
    int a;
    print();
    int b;
}